--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,9 @@ h1, h2, h3{
 .align{
     text-align: center;
 }
+button{
+    cursor: pointer;
+}
 
 /*COLOURS*/
 :root {
@@ -178,6 +181,7 @@ header h1{
 a{
     text-decoration: none;
     color: black;
+    cursor: pointer;
 }
 ul{
     list-style: none;
@@ -262,6 +266,34 @@ footer h6{
     text-align: center;
     font-size: 2.5rem;
 }
+.search-cont{
+    position: relative;
+    border-radius: 20px;
+    background-color: transparent;
+}
+#search{
+    border: 1px solid var(--darkest-blue);
+    border-radius: 20px;
+    height: 1.5rem;
+    width: 12rem;
+    position: absolute;
+    right: 0;
+    padding: 0rem 1rem 0rem 1rem;
+    font-size: 0.8rem;
+    background-color: rgb(243, 243, 243);
+}
+#search:hover, #search:active, #search:focus{
+    cursor: pointer;
+    outline: none;
+    border: 2px solid var(--darkest-blue);
+    background-color: white;
+}
+.searchIcon{
+    z-index: 10;
+    margin-right: 1rem;
+    font-size: 1rem !important;
+    margin-top: 0.2rem;
+}
 .bs-cont{
     margin-top: 4rem;
     background-color: var(--light-blue);
@@ -273,10 +305,13 @@ footer h6{
 }
 
 .bs-item{
-
     text-align: center;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
     border: 8px solid white;
+}
+.bs-item:hover{
+    box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    cursor: pointer;
 }
 .bs-desc{
     padding: 0.5rem;
@@ -327,10 +362,90 @@ footer h6{
     font-style: italic;
     text-decoration: underline;
 }
+/*END*/
+
+
+/*CONTACT PAGE*/
+.contact-header{
+    width: 100%;
+    height: 8rem;
+    margin-top: 10rem;
+}
+.contact-header img{
+    width: 80%;
+}
+.contact-info{
+    margin-top: 5rem;
+    padding: 0.5rem;
+}
+.visitUs{
+    border-right: 1px solid black;
+    padding: 1rem;
+} 
+.details{
+    padding: 1rem;
+    justify-content: end;
+    align-items: start;
+}
+.fa-envelope, .fa-phone{
+    font-size: 1.2rem;
+    padding: 0.2rem 0.6rem 0rem 0rem;
+}
+.phone, .email{
+    justify-content: start;
+    align-items: start;
+}
+.map{
+    width: 100%;
+    margin: 3rem 0rem 3rem 0rem;
+}
+.map iframe{
+    width: 90%;
+    height: 10rem;
+}
+.contact{
+    width: 80%;
+    margin: 0rem;
+    padding: 0rem;
+}
+.contact-title{
+    background-color: var(--medium-blue);
+    margin-bottom: -0.5rem;
+    border-radius: 8px 8px 0px 0px;
+    padding: 0.5rem 0rem 0.5rem 0rem;
+
+}
+.form-cont{
+    width: 100%;
+}
+form{
+    background-color: var(--dark-blue);
+    color: white;
+    padding: 1rem 0rem 1rem 0rem;
+    border-radius: 0px 0px 8px 8px;
+}
 
 
 
+/*PRODUCTS PAGE*/
+.colour{
+    border: 2px solid red;
+    align-items: start;
+    width: fit-content;
+    justify-content: start;
+}
+.colour img, .radio{
+    margin: 0.3rem 0.5rem 0rem 0rem;
+}
 
+
+/*filters*/
+#filterButton{
+    margin-top: 12rem;
+}
+#filters{
+    display: none;
+}
 
 /*END*/
 
