-Rendered out categories list with php for dynamic list of categories products.php
-Updated contact form to send emails successfully

--- a/css/main.css
+++ b/css/main.css
@@ -906,6 +906,7 @@ select {
     .category {
         border-bottom: 1px solid var(--darkest-blue);
         padding-bottom: 0.5rem;
+        width: 80%;
     }
 
     .category:hover {
